<resources>
    <string name="app_name">LifeCycle</string>
    <string name="main_activity">Main Activity</string>
    <string name="btn_subactivity">Go to SubActivity!</string>
    <string name="btn_firstfragment">Go to FirstFragment!</string>
    <string name="toast_short">Toast - Short</string>
    <string name="toast_long">Toast - Long</string>
    <string name="sub_activity">Sub Activity</string>
    <string name="btn_back">Back</string>
    <string name="first_fragment">First Fragment</string>
</resources>